--- a/css/componentes/main.css
+++ b/css/componentes/main.css
@@ -1,13 +1,3 @@
-* {
-  text-decoration: none;
-  list-style: none;
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  scroll-behavior: smooth;
-  font-family: "League Spartan";
-}
-
 body #main {
   border: solid 3px red;
   width: auto;
@@ -60,4 +50,4 @@ body #main .welcomeMessage .welcome .name {
   color: blue;
 }
 
-/*# sourceMappingURL=styles.css.map */
+/*# sourceMappingURL=main.css.map */
