--- a/css/componentes/variables.css
+++ b/css/componentes/variables.css
@@ -1,3 +1,11 @@
-
+* {
+  text-decoration: none;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  scroll-behavior: smooth;
+  font-family: "League Spartan";
+}
 
 /*# sourceMappingURL=variables.css.map */
