--- a/scss/componentes/main.scss
+++ b/scss/componentes/main.scss
@@ -1,6 +1,6 @@
 body {
   #main {
-    border: solid 3px red;
+    // border: solid 3px red;
     width: auto;
     height: 100vh;
     padding-top: 50px;
@@ -31,15 +31,16 @@ body {
           li {
             a {
               color: black;
-              .fa-bars, .language, .fa-moon {
+              .fa-bars,
+              .language,
+              .fa-moon {
                 transform: translateY(-20px);
                 transition: 1s ease-in-out;
               }
-              
+
               .intro {
                 transform: translateY(0px);
               }
-
             }
           }
         }
@@ -47,7 +48,6 @@ body {
     }
     .welcomeMessage {
       margin-top: 30px;
-      border: solid 5px rgb(42, 103, 156);
       .welcome {
         display: flex;
         justify-content: center;
@@ -57,10 +57,30 @@ body {
         .welcomeText {
           color: transparent; /* Hace el relleno del texto transparente */
           -webkit-text-stroke: 1px black; /* Borde de 2px de ancho y color negro */
+          letter-spacing: 2px;
         }
         .name {
           color: blue;
         }
+      }
+    }
+    .presentation {
+      display: flex;
+      justify-content: center;
+      margin-top: 10px;
+      .presentationText {
+        text-align: center;
+        font-size: 10px;
+      }
+    }
+    .moreInfo {
+      margin-top: 20px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      gap: 20px;
+      p {
+        font-size: 10px;
       }
     }
   }
