--- a/scss/componentes/main.scss
+++ b/scss/componentes/main.scss
@@ -48,6 +48,9 @@ body {
     }
     .welcomeMessage {
       margin-top: 30px;
+      transition: all 1s;
+      transform: translateY(-50px);
+      opacity: 0;
       .welcome {
         display: flex;
         justify-content: center;
@@ -68,6 +71,9 @@ body {
       display: flex;
       justify-content: center;
       margin-top: 10px;
+      transition: all 1s;
+      transform: translateY(-50px);
+      opacity: 0;
       .presentationText {
         text-align: center;
         font-size: 10px;
@@ -79,9 +85,16 @@ body {
       align-items: center;
       justify-content: center;
       gap: 20px;
+      transform: translateY(-50px);
+      opacity: 0;
+      transition: all 1s;
       p {
         font-size: 10px;
       }
+    }
+    .intro {
+      transform: translateY(0px);
+      opacity: 1;
     }
   }
 }
