animation main terminada

--- a/css/componentes/main.css
+++ b/css/componentes/main.css
@@ -43,9 +43,6 @@ body #main nav .navigation ul li a .intro {
 }
 body #main .welcomeMessage {
   margin-top: 30px;
-  transition: all 1s;
-  transform: translateY(-50px);
-  opacity: 0;
 }
 body #main .welcomeMessage .welcome {
   display: flex;
@@ -62,17 +59,35 @@ body #main .welcomeMessage .welcome .welcomeText {
 body #main .welcomeMessage .welcome .name {
   color: blue;
 }
-body #main .presentation {
-  display: flex;
-  justify-content: center;
-  margin-top: 10px;
+body #main .wOne {
   transition: all 1s;
   transform: translateY(-50px);
   opacity: 0;
 }
-body #main .presentation .presentationText {
+body #main .wTwo {
+  transition: all 1s;
+  transform: translateY(-50px);
+  opacity: 0;
+}
+body #main .presentation {
   text-align: center;
+  margin-top: 10px;
+  border: solid 1px red;
   font-size: 10px;
+}
+body #main .presentation .pOne {
+  transition: all 1s;
+  transform: translateY(-50px);
+  opacity: 0;
+}
+body #main .presentation .pTwo {
+  transition: all 1s;
+  transform: translateY(-50px);
+  opacity: 0;
+}
+body #main .presentation .intro {
+  transform: translateY(0px);
+  opacity: 1;
 }
 body #main .moreInfo {
   margin-top: 20px;
