--- a/css/componentes/variables.css
+++ b/css/componentes/variables.css
@@ -5,7 +5,7 @@
   padding: 0;
   box-sizing: border-box;
   scroll-behavior: smooth;
-  font-family: "League Spartan";
+  font-family: "League Spartan", serif;
 }
 
 /*# sourceMappingURL=variables.css.map */
