--- a/scss/componentes/main.scss
+++ b/scss/componentes/main.scss
@@ -55,6 +55,8 @@ body {
         gap: 5px;
         text-transform: uppercase;
         margin: 3px;
+        font-size: 30px;
+        font-weight: 600;
         .welcomeText {
           color: transparent; /* Hace el relleno del texto transparente */
           -webkit-text-stroke: 1px black; /* Borde de 2px de ancho y color negro */
@@ -65,22 +67,20 @@ body {
         }
       }
     }
-    .wOne{
+    .wOne {
       transition: all 1s;
       transform: translateY(-50px);
       opacity: 0;
     }
-    .wTwo{
+    .wTwo {
       transition: all 1s;
       transform: translateY(-50px);
-      opacity: 0; 
+      opacity: 0;
     }
     .presentation {
       text-align: center;
       margin-top: 10px;
-
-      border: solid 1px red; 
-      font-size: 10px;
+      font-size: 18px;
       .pOne {
         transition: all 1s;
         transform: translateY(-50px);
@@ -105,8 +105,14 @@ body {
       transform: translateY(-50px);
       opacity: 0;
       transition: all 1s;
-      p {
-        font-size: 10px;
+      font-size: 14px;
+      .pContainer {
+        display: flex;
+       align-items: center;
+       gap: 5px;
+        p {
+          font-size: 14px;
+        }
       }
     }
     .intro {
