--- a/css/componentes/main.css
+++ b/css/componentes/main.css
@@ -1,117 +1,17 @@
-body #main {
-  width: auto;
-  height: 100vh;
-  padding-top: 50px;
-  margin: 0px 40px;
-}
-body #main nav {
-  display: flex;
-  overflow: hidden;
-}
-body #main nav .logoContainer {
-  width: 50%;
-}
-body #main nav .logoContainer .logo {
-  width: auto;
-  transform: translateY(-20px);
-  transition: 1s ease-in-out;
-}
-body #main nav .logoContainer .intro {
-  transform: translateY(0px);
-}
-body #main nav .navigation {
-  display: flex;
-  justify-content: flex-end;
-  align-items: center;
-  width: 50%;
-}
-body #main nav .navigation ul {
-  gap: 15px;
-  display: flex;
-}
-body #main nav .navigation ul li a {
-  color: black;
-}
-body #main nav .navigation ul li a .fa-bars,
-body #main nav .navigation ul li a .language,
-body #main nav .navigation ul li a .fa-moon {
-  transform: translateY(-20px);
-  transition: 1s ease-in-out;
-}
-body #main nav .navigation ul li a .intro {
-  transform: translateY(0px);
-}
-body #main .welcomeMessage {
-  margin-top: 30px;
-}
-body #main .welcomeMessage .welcome {
-  display: flex;
-  justify-content: center;
-  gap: 5px;
-  text-transform: uppercase;
-  margin: 3px;
-  font-size: 30px;
-  font-weight: 600;
-}
-body #main .welcomeMessage .welcome .welcomeText {
-  color: transparent; /* Hace el relleno del texto transparente */
-  -webkit-text-stroke: 1px black; /* Borde de 2px de ancho y color negro */
-  letter-spacing: 2px;
-}
-body #main .welcomeMessage .welcome .name {
-  color: blue;
-}
-body #main .wOne {
-  transition: all 1s;
-  transform: translateY(-50px);
-  opacity: 0;
-}
-body #main .wTwo {
-  transition: all 1s;
-  transform: translateY(-50px);
-  opacity: 0;
-}
-body #main .presentation {
-  text-align: center;
-  margin-top: 10px;
-  font-size: 18px;
-}
-body #main .presentation .pOne {
-  transition: all 1s;
-  transform: translateY(-50px);
-  opacity: 0;
-}
-body #main .presentation .pTwo {
-  transition: all 1s;
-  transform: translateY(-50px);
-  opacity: 0;
-}
-body #main .presentation .intro {
-  transform: translateY(0px);
-  opacity: 1;
-}
-body #main .moreInfo {
-  margin-top: 20px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  gap: 20px;
-  transform: translateY(-50px);
-  opacity: 0;
-  transition: all 1s;
-  font-size: 14px;
-}
-body #main .moreInfo .pContainer {
-  display: flex;
-  align-items: center;
-  gap: 5px;
-}
-body #main .moreInfo .pContainer p {
-  font-size: 14px;
-}
-body #main .intro {
-  transform: translateY(0px);
-  opacity: 1;
-}
+/* Error: Undefined variable.
+ *    ,
+ * 31 |               color:$main;
+ *    |                     ^^^^^
+ *    '
+ *   scss\componentes\main.scss 31:21  root stylesheet */
 
-/*# sourceMappingURL=main.css.map */
+body::before {
+  font-family: "Source Code Pro", "SF Mono", Monaco, Inconsolata, "Fira Mono",
+      "Droid Sans Mono", monospace, monospace;
+  white-space: pre;
+  display: block;
+  padding: 1em;
+  margin-bottom: 1em;
+  border-bottom: 2px solid black;
+  content: "Error: Undefined variable.\a    \2577 \a 31 \2502                color:$main;\d\a    \2502                      ^^^^^\a    \2575 \a   scss\\componentes\\main.scss 31:21  root stylesheet";
+}
