--- a/css/componentes/main.css
+++ b/css/componentes/main.css
@@ -1,9 +1,9 @@
 /* Error: Undefined variable.
  *    ,
- * 33 |               color:$main;
- *    |                     ^^^^^
+ * 19 |           -webkit-text-stroke: 1px $main; /* Borde de 2px de ancho y color negro *∕
+ *    |                                    ^^^^^
  *    '
- *   scss\componentes\main.scss 33:21  root stylesheet */
+ *   scss\componentes\main.scss 19:36  root stylesheet */
 
 body::before {
   font-family: "Source Code Pro", "SF Mono", Monaco, Inconsolata, "Fira Mono",
@@ -13,5 +13,5 @@ body::before {
   padding: 1em;
   margin-bottom: 1em;
   border-bottom: 2px solid black;
-  content: "Error: Undefined variable.\a    \2577 \a 33 \2502                color:$main;\d\a    \2502                      ^^^^^\a    \2575 \a   scss\\componentes\\main.scss 33:21  root stylesheet";
+  content: "Error: Undefined variable.\a    \2577 \a 19 \2502            -webkit-text-stroke: 1px $main; /* Borde de 2px de ancho y color negro */\d\a    \2502                                     ^^^^^\a    \2575 \a   scss\\componentes\\main.scss 19:36  root stylesheet";
 }
