--- a/scss/componentes/main.scss
+++ b/scss/componentes/main.scss
@@ -1,53 +1,10 @@
 body {
+  height: 100vh;
   #main {
     width: auto;
-    height: 100vh;
-    padding-top: 50px;
-    margin: 0px 40px;
-    nav {
-      display: flex;
-      overflow: hidden;
-      .logoContainer {
-        width: 50%;
-        .logo {
-          width: auto;
-          transform: translateY(-20px);
-          transition: 1s ease-in-out;
-        }
-        .intro {
-          transform: translateY(0px);
-        }
-      }
-      .navigation {
-        display: flex;
-        justify-content: flex-end;
-        // align-items: center;
-        width: 50%;
-        // border: solid 1px red;
-        ul {
-          gap: 15px;
-          display: flex;
-          align-items: center;
-          li {
-            a {
-              color:$main;
-              .fa-bars,
-              .language,
-              .fa-moon {
-                transform: translateY(-20px);
-                transition: 0.8s ease-in-out;
-              }
-
-              .intro {
-                transform: translateY(0px);
-              }
-            }
-          }
-        }
-      }
-    }
+  
     .welcomeMessage {
-      margin-top: 30px;
+      margin-top: 0px;
 
       .welcome {
         display: flex;
@@ -143,5 +100,8 @@ body {
       transform: translateY(0px);
       opacity: 1;
     }
+  }
+  .display{
+    display: none;
   }
 }
