--- a/css/componentes/variables.css
+++ b/css/componentes/variables.css
@@ -1,3 +1,11 @@
+body {
+  height: 100vh;
+  overflow: hidden;
+  margin: 0;
+  display: flex;
+  flex-direction: column;
+}
+
 * {
   text-decoration: none;
   list-style: none;
