--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -1,3 +1,4 @@
 @import "./componentes/variables.scss";
 @import "./componentes/nav.scss";
 @import "./componentes/main.scss";
+@import "./componentes/myProjects.scss"
