--- a/scss/componentes/myProjects.scss
+++ b/scss/componentes/myProjects.scss
@@ -17,7 +17,10 @@ body {
       .titleContainer {
         border-bottom: solid 2px $main;
         padding-bottom: 5px;
-        h3 {
+        transition:all 0.7s;
+        transform: translateY(-70px);
+        opacity: 0;
+        .workTitle {
           font-size: 50px;
           text-transform: uppercase;
         }
@@ -25,6 +28,10 @@ body {
       .listContent {
         width: 100%;
         height: 100%;
+      }
+      .animation{
+        transform: translateY(0);
+        opacity: 1;
       }
     }
   }
