--- a/css/styles.css
+++ b/css/styles.css
@@ -184,6 +184,21 @@ body #myProjects .listContainer .listContent {
   width: 100%;
   height: 100%;
 }
+body #myProjects .listContainer .listContent a {
+  width: 100%;
+  height: 80px;
+  border-bottom: solid 1px #000000;
+  display: flex;
+  align-items: center;
+  overflow: hidden;
+}
+body #myProjects .listContainer .listContent a:hover .content {
+  transform: translateX(0px);
+}
+body #myProjects .listContainer .listContent a .content {
+  transform: translateX(-15px);
+  transition: 0.4s;
+}
 body #myProjects .listContainer .animation {
   transform: translateY(0);
   opacity: 1;
