--- a/scss/componentes/myProjects.scss
+++ b/scss/componentes/myProjects.scss
@@ -17,7 +17,7 @@ body {
       .titleContainer {
         border-bottom: solid 2px $main;
         padding-bottom: 5px;
-        transition:all 0.7s;
+        transition: all 0.7s;
         transform: translateY(-70px);
         opacity: 0;
         .workTitle {
@@ -28,8 +28,29 @@ body {
       .listContent {
         width: 100%;
         height: 100%;
+        a {
+          width: 100%;
+          height: 80px;
+          border-bottom: solid 1px $main;
+          display: flex;
+          align-items: center;
+          overflow: hidden;
+          &:hover {
+            .content {
+              transform: translateX(0px);
+            }
+          }
+          .content {
+            transform: translateX(-15px);
+            transition: 0.4s;
+
+            // .linkText {
+
+            // }
+          }
+        }
       }
-      .animation{
+      .animation {
         transform: translateY(0);
         opacity: 1;
       }
