--- a/scss/componentes/myProjects.scss
+++ b/scss/componentes/myProjects.scss
@@ -5,10 +5,12 @@ body {
     flex-grow: 1;
     display: none;
     .previewContainer {
-      border: solid 0.1px black;
+
       width: 50%;
       border-radius: 0px 50px 0px 0px;
     }
+    
+    
     .listContainer {
       width: 50%;
       padding-left: 40px;
@@ -28,6 +30,9 @@ body {
       .listContent {
         width: 100%;
         height: 100%;
+        opacity: 0;
+        transition: all 0.7s;
+        transform: translateY(-120px);
         a {
           width: 100%;
           height: 80px;
@@ -35,18 +40,19 @@ body {
           display: flex;
           align-items: center;
           overflow: hidden;
+          color: $main;
           &:hover {
             .content {
               transform: translateX(0px);
+            }
+
+            .previewContainer {
+              background-color: red;
             }
           }
           .content {
             transform: translateX(-15px);
             transition: 0.4s;
-
-            // .linkText {
-
-            // }
           }
         }
       }
