--- a/scss/componentes/myProjects.scss
+++ b/scss/componentes/myProjects.scss
@@ -5,12 +5,29 @@ body {
     flex-grow: 1;
     display: none;
     .previewContainer {
-
+      // border: solid 1px red;
       width: 50%;
       border-radius: 0px 50px 0px 0px;
+      transition: opacity 1s, transform 1s;
+      opacity: 0;
+      &.ganadera {
+        background-image: url(../assets/ganaderaArenales.png);
+        background-size: cover;
+        background-position: center;
+        background-repeat: no-repeat;
+        opacity: 1;
+        transform: background-image(50%);
+      }
+      &.das {
+        background-image: url(../assets/dasService.png);
+        background-size: cover;
+        background-position: center;
+        background-repeat: no-repeat;
+        opacity: 1;
+        transform: background-image(50%);
+      }
     }
-    
-    
+
     .listContainer {
       width: 50%;
       padding-left: 40px;
