primer parte de more about me

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -1,4 +1,5 @@
 @import "./componentes/variables.scss";
 @import "./componentes/nav.scss";
 @import "./componentes/main.scss";
-@import "./componentes/myProjects.scss"
+@import "./componentes/myProjects.scss";
+@import "./componentes/moreAboutMe.scss";
