--- a/css/styles.css
+++ b/css/styles.css
@@ -231,4 +231,39 @@ body .displayBlock {
   display: flex !important;
 }
 
+body {
+  position: relative;
+}
+body #moreAboutMe {
+  width: 100%;
+  height: 100vh;
+  border: solid 5px red;
+  position: absolute;
+  display: none;
+  z-index: -1;
+}
+body #moreAboutMe .mamAbout {
+  width: 50%;
+  height: 100%;
+  border: solid 5px green;
+  transform: translateY(-100px);
+  opacity: 0;
+  transition: all 1s;
+}
+body #moreAboutMe .mamCarrousel {
+  width: 50%;
+  height: 100%;
+  border: solid 5px blue;
+  transform: translateY(-100px);
+  opacity: 0;
+  transition: all 1s;
+}
+body #moreAboutMe .animation {
+  transform: translateY(0px);
+  opacity: 1;
+}
+body .displayBlock {
+  display: flex;
+}
+
 /*# sourceMappingURL=styles.css.map */
