--- a/css/componentes/moreAboutMe.css
+++ b/css/componentes/moreAboutMe.css
@@ -1,36 +1,17 @@
-body {
-  position: relative;
-}
-body #moreAboutMe {
-  width: 100%;
-  height: 100vh;
-  border: solid 5px red;
-  position: absolute;
-  display: none;
-  z-index: -1;
-}
-body #moreAboutMe .mamAbout {
-  width: 50%;
-  height: 100%;
-  border: solid 5px green;
-  transform: translateY(-100px);
-  opacity: 0;
-  transition: all 1s;
-}
-body #moreAboutMe .mamCarrousel {
-  width: 50%;
-  height: 100%;
-  border: solid 5px blue;
-  transform: translateY(-100px);
-  opacity: 0;
-  transition: all 1s;
-}
-body #moreAboutMe .animation {
-  transform: translateY(0px);
-  opacity: 1;
-}
-body .displayBlock {
-  display: flex;
-}
+/* Error: Undefined variable.
+ *    ,
+ * 25 |                 border-top: 1px solid $main;
+ *    |                                       ^^^^^
+ *    '
+ *   scss\componentes\moreAboutMe.scss 25:39  root stylesheet */
 
-/*# sourceMappingURL=moreAboutMe.css.map */
+body::before {
+  font-family: "Source Code Pro", "SF Mono", Monaco, Inconsolata, "Fira Mono",
+      "Droid Sans Mono", monospace, monospace;
+  white-space: pre;
+  display: block;
+  padding: 1em;
+  margin-bottom: 1em;
+  border-bottom: 2px solid black;
+  content: "Error: Undefined variable.\a    \2577 \a 25 \2502                  border-top: 1px solid $main;\d\a    \2502                                        ^^^^^\a    \2575 \a   scss\\componentes\\moreAboutMe.scss 25:39  root stylesheet";
+}
