--- a/scss/componentes/moreAboutMe.scss
+++ b/scss/componentes/moreAboutMe.scss
@@ -3,25 +3,42 @@ body {
   #moreAboutMe {
     width: 100%;
     height: 100vh;
-    border: solid 5px red;
     position: absolute;
     display: none;
     z-index: -1;
     .mamAbout {
         width: 50%;
         height: 100%;
-        border: solid 5px green;
         transform: translateY(-100px);
         opacity: 0;
         transition: all 1s;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        .aboutContainer{
+            margin: 50px;
+            h3 {
+                font-size: 50px;
+                padding-bottom: 5px;
+            }
+            p {
+                border-top: 1px solid $main;
+                padding-top: 15px;
+            }
+        }
     }
     .mamCarrousel {
       width: 50%;
       height: 100%;
-      border: solid 5px blue;
       transform: translateY(-100px);
       opacity: 0;
-      transition: all 1s;   
+      transition: all 1s;
+      img{
+        width: 100%;
+            transform: translateY(-100px);
+          object-fit: cover;  
+          opacity: 70%  ;
+      } 
     }
     .animation {
       transform: translateY(0px);
