agregado de fotos my projects

--- a/scss/componentes/myProjects.scss
+++ b/scss/componentes/myProjects.scss
@@ -5,26 +5,34 @@ body {
     flex-grow: 1;
     display: none;
     .previewContainer {
-      // border: solid 1px red;
       width: 50%;
       border-radius: 0px 50px 0px 0px;
-      transition: opacity 1s, transform 1s;
-      opacity: 0;
+      transition: opacity 0.7s ease-in-out, background-image 0.5s ease-in-out;
+      opacity: 0; /* Se inicia oculta */
+      pointer-events: none; /* Para evitar interacción no deseada cuando está oculta */
+    
       &.ganadera {
-        background-image: url(../assets/ganaderaArenales.png);
+        background-image: url(../assets/ganaderaArenales.jpggit );
         background-size: cover;
         background-position: center;
         background-repeat: no-repeat;
         opacity: 1;
-        transform: background-image(50%);
       }
+
       &.das {
-        background-image: url(../assets/dasService.png);
+        background-image: url(../assets/dasService.jpg);
         background-size: cover;
         background-position: center;
         background-repeat: no-repeat;
         opacity: 1;
-        transform: background-image(50%);
+      }
+
+      &.dres {
+        background-image: url(../assets/dresOrlandi.jpg);
+        background-size: cover;
+        background-position: center;
+        background-repeat: no-repeat;
+        opacity: 1;
       }
     }
 
@@ -33,23 +41,27 @@ body {
       padding-left: 40px;
       display: flex;
       flex-direction: column;
+
       .titleContainer {
         border-bottom: solid 2px $main;
         padding-bottom: 5px;
         transition: all 0.7s;
         transform: translateY(-70px);
         opacity: 0;
+
         .workTitle {
           font-size: 50px;
           text-transform: uppercase;
         }
       }
+
       .listContent {
         width: 100%;
         height: 100%;
         opacity: 0;
         transition: all 0.7s;
         transform: translateY(-120px);
+
         a {
           width: 100%;
           height: 80px;
@@ -58,27 +70,27 @@ body {
           align-items: center;
           overflow: hidden;
           color: $main;
+
           &:hover {
             .content {
               transform: translateX(0px);
             }
-
-            .previewContainer {
-              background-color: red;
-            }
           }
+
           .content {
             transform: translateX(-15px);
             transition: 0.4s;
           }
         }
       }
+
       .animation {
         transform: translateY(0);
         opacity: 1;
       }
     }
   }
+
   .displayBlock {
     display: flex !important;
   }
