--- a/css/styles.css
+++ b/css/styles.css
@@ -161,24 +161,30 @@ body #myProjects {
 body #myProjects .previewContainer {
   width: 50%;
   border-radius: 0px 50px 0px 0px;
-  transition: opacity 1s, transform 1s;
-  opacity: 0;
+  transition: opacity 0.7s ease-in-out, background-image 0.5s ease-in-out;
+  opacity: 0; /* Se inicia oculta */
+  pointer-events: none; /* Para evitar interacción no deseada cuando está oculta */
 }
 body #myProjects .previewContainer.ganadera {
-  background-image: url(../assets/ganaderaArenales.png);
+  background-image: url(../assets/ganaderaArenales.jpg);
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
   opacity: 1;
-  transform: background-image(50%);
 }
 body #myProjects .previewContainer.das {
-  background-image: url(../assets/dasService.png);
+  background-image: url(../assets/dasService.jpg);
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
   opacity: 1;
-  transform: background-image(50%);
+}
+body #myProjects .previewContainer.dres {
+  background-image: url(../assets/dresOrlandi.jpg);
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  opacity: 1;
 }
 body #myProjects .listContainer {
   width: 50%;
@@ -215,9 +221,6 @@ body #myProjects .listContainer .listContent a {
 }
 body #myProjects .listContainer .listContent a:hover .content {
   transform: translateX(0px);
-}
-body #myProjects .listContainer .listContent a:hover .previewContainer {
-  background-color: red;
 }
 body #myProjects .listContainer .listContent a .content {
   transform: translateX(-15px);
