correcion fotos my projects

--- a/scss/componentes/myProjects.scss
+++ b/scss/componentes/myProjects.scss
@@ -12,7 +12,7 @@ body {
       pointer-events: none; /* Para evitar interacción no deseada cuando está oculta */
     
       &.ganadera {
-        background-image: url(../assets/ganaderaArenales.jpggit );
+        background-image: url(../assets/ganaderaArenales.jpg );
         background-size: cover;
         background-position: center;
         background-repeat: no-repeat;
