--- a/scss/componentes/nav.scss
+++ b/scss/componentes/nav.scss
@@ -9,6 +9,10 @@ body {
         width: auto;
         transform: translateY(-20px);
         transition: 1s ease-in-out;
+        a {
+          text-decoration: none;
+          color: $main;
+        }
       }
       .intro {
         transform: translateY(0px);
