--- a/css/componentes/variables.css
+++ b/css/componentes/variables.css
@@ -4,6 +4,12 @@ body {
   margin: 0;
   display: flex;
   flex-direction: column;
+  background-color: #efefef;
+  transition: all 1s;
+}
+
+.moon {
+  background-color: #474747;
 }
 
 * {
