--- a/scss/componentes/nav.scss
+++ b/scss/componentes/nav.scss
@@ -9,6 +9,13 @@ body {
         width: auto;
         transform: translateY(-20px);
         transition: 1s ease-in-out;
+        .logoM {
+          text-decoration: none;
+          color: $main;
+        }
+        .moon {
+          color: $mainMoon;
+        }
       }
       .intro {
         transform: translateY(0px);
@@ -17,9 +24,7 @@ body {
     .navigation {
       display: flex;
       justify-content: flex-end;
-      // align-items: center;
       width: 50%;
-      // border: solid 1px red;
       ul {
         gap: 15px;
         display: flex;
@@ -50,14 +55,14 @@ body {
           .fa-moon {
             position: absolute;
             cursor: pointer;
-            transition: all 1s;
+            transition: all 0.5s;
             top: 0;
             left: 0;
           }
           .fa-sun {
             position: absolute;
             left: 0;
-            transition: all 1s;
+            transition: all 0.5s;
             top: 20px;
           }
         }
