--- a/scss/componentes/main.scss
+++ b/scss/componentes/main.scss
@@ -45,12 +45,20 @@ body {
         transition: all 0.7s;
         transform: translateY(-50px);
         opacity: 0;
+        // background-color: red;
+      }
+      .moon {
+        background-color: transparent;
+        color: $mainMoon !important
       }
       .pTwo {
         transition: all 0.7s;
         transform: translateY(-50px);
         opacity: 0;
         color: $main;
+      }
+      .pText{
+        transition: all 0.7s ease-in-out;
       }
       .intro {
         transform: translateY(0px);
